<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSecondary"
    tools:context=".QuizActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <!--Navigation Bar-->
        <LinearLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorPrimary"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:weightSum="0">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@string/compass_logo"
                android:src="@drawable/compass_white_logo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/app_name"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

        </LinearLayout>

        <!--WELCOME CARD VIEW-->
        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_margin="16dp"
            card_view:cardCornerRadius="4dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center">

                <TextView
                    android:id="@+id/welcome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/welcome"
                    android:textColor="@android:color/black"
                    android:textSize="24sp" />

                <EditText
                    android:id="@+id/your_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_above="@id/begin_quiz"
                    android:layout_below="@id/welcome"
                    android:hint="@string/enter_name"
                    android:inputType="textCapWords"
                    android:padding="10dp" />
            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <!--CARD VIEW/RADIO GROUP - QUESTION 1-->
        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_margin="16dp"
            card_view:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question1"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <RadioGroup
                    android:id="@+id/radio_group_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer1_1"
                        android:textColor="@android:color/black"
                        android:textSize="14sp" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer1_2"
                        android:textColor="@android:color/black"
                        android:textSize="14sp" />

                    <RadioButton
                        android:id="@+id/answer1_3_correct"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer1_3"
                        android:textColor="@android:color/black"
                        android:textSize="14sp" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer1_4"
                        android:textColor="@android:color/black"
                        android:textSize="14sp" />
                </RadioGroup>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <!--CARD VIEW/CHECKBOXES - QUESTION 2-->
        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_margin="16dp"
            card_view:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question2"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer2_1"
                    android:textSize="14sp" />

                <CheckBox
                    android:id="@+id/answer2_2_correct"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer2_2"
                    android:textSize="14sp" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer2_3"
                    android:textSize="14sp" />

                <CheckBox
                    android:id="@+id/answer2_4_correct"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer2_4"
                    android:textSize="14sp" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <!--CARD VIEW/RADIO GROUP - QUESTION 3-->
        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_margin="16dp"
            card_view:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question3"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/hitler_image"
                    android:src="@drawable/hitler" />

                <RadioGroup
                    android:id="@+id/radio_group_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer3_1"
                        android:textColor="@android:color/black"
                        android:textSize="14sp" />

                    <RadioButton
                        android:id="@+id/answer3_2_correct"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer3_2"
                        android:textColor="@android:color/black"
                        android:textSize="14sp" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer3_3"
                        android:textColor="@android:color/black"
                        android:textSize="14sp" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer3_4"
                        android:textColor="@android:color/black"
                        android:textSize="14sp" />
                </RadioGroup>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <!--CARD VIEW/EDIT TEXT - QUESTION 4-->
        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_margin="16dp"
            card_view:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question4"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/answer4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/name_of_country"
                    android:inputType="textCapWords"
                    android:padding="10dp"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/display_egypt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/empty"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <!--CARD VIEW/RADIO GROUP - QUESTION 5-->
        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_margin="16dp"
            card_view:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/question5"
                    android:textColor="@android:color/black"
                    android:textSize="16sp" />

                <RadioGroup
                    android:id="@+id/radio_group_5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer5_1"
                        android:textColor="@android:color/black"
                        android:textSize="14sp" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer5_2"
                        android:textColor="@android:color/black"
                        android:textSize="14sp" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer5_3"
                        android:textColor="@android:color/black"
                        android:textSize="14sp" />

                    <RadioButton
                        android:id="@+id/answer5_4_correct"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/answer5_4"
                        android:textColor="@android:color/black"
                        android:textSize="14sp" />
                </RadioGroup>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <!--TEXT VIEW THAT DISPLAYS SCORES-->
        <TextView
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/emptyForMessage"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <!--SUBMIT BUTTON-->
        <Button
            android:id="@+id/view_results"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorPrimaryDark"
            android:onClick="submit"
            android:text="@string/submit"
            android:textColor="@android:color/white" />

        <!--RESET BUTTON-->
        <Button
            android:id="@+id/reset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorPrimaryDark"
            android:onClick="reset_button"
            android:text="@string/reset"
            android:textColor="@android:color/white"
            android:visibility="gone" />

    </LinearLayout>

</ScrollView>