<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSecondary"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <!--Navigation Bar-->
    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:weightSum="0">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/compass_logo"
            android:src="@drawable/compass_white_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

    </LinearLayout>


    <!--COMPASS IMAGE-->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_weight="5"
        android:contentDescription="@string/compass_image"
        android:scaleType="fitCenter"
        android:src="@drawable/compass" />

    <!--WORLD HISTORY QUIZ TEXT VIEW-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp" />


    <!--BEGIN QUIZ BUTTON-->
    <Button
        android:id="@+id/begin_quiz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:layout_weight="0"
        android:background="@color/colorPrimaryDark"
        android:onClick="beginQuiz"
        android:text="@string/begin_quiz"
        android:textColor="@android:color/white" />
</LinearLayout>